<resources>
    <string name="app_name">Barduino</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings!</string>
    <string name="connect_now">Connect</string>
    <string name="edit_ip_and_port">Edit IP and port</string>
    <string name="update_now">Write to server</string>
    <string name="messageToServer">AVAREQ</string>
    <string name="mixer">Mix Drinks</string>
    <string name="disconnect">Disconnect</string>
    <string name="ipNummer">192.168.1.2</string>
    <string name="messageFrServer">Message \n from server</string>
    <string name="testBtn">Test Button</string>
    <string name="startTimer">Start timer</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="logInOut">LOG IN</string>
    <color name="appBg">#dcdcdc</color>
    <color name="background_boxes">#E1E4E6</color>
    <color name="headerColor">#000000</color>
    <color name="textColor">#212121</color>
    <color name="navyblue">#006699</color>
    <color name="statusColor">#00979C</color>
    <color name="fluidColor">#424242</color>
    <color name="volumeColor">#070707</color>
    <color name="logoColor">#B20000</color>
    <integer name="transparent">0x0000</integer>
    <integer name="appBg">0x24b2eb</integer>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
